kuber-homeworks/1.5/src/2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: task1-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task1-nginx
  template:
    metadata:
      labels:
        app: task1-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-port
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: task1-nginx
  ports:
  - name: task1-nginx-svc-port
    port: 80
    targetPort: nginx-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: task1-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1-multitool
  template:
    metadata:
      labels:
        app: task1-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: multitool-port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: task1-multitool
  ports:
  - name: task1-multitool-svc-port
    port: 80
    targetPort: multitool-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
